clusters/my-cluster/picture-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picture
  namespace: default
  labels:
    app: picture
spec:
  selector:
    matchLabels:
      app: picture
  template:
    metadata:
      labels:
        app: picture
    spec:
      containers:
      - name: picture
        image: gcr.io/picture-generator/picture-service:1.0.2 # {"$imagepolicy": "flux-system:picture"}
