clusters/my-cluster/wrk-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workload-identity-test
  namespace: default
spec:
  containers:
  - image: google/cloud-sdk:slim
    name: workload-identity-test
    command: ["sleep","infinity"]
  serviceAccountName: k8s-pubsub 
  nodeSelector:
    iam.gke.io/gke-metadata-server-enabled: "true"
