clusters/my-cluster/picture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture
  namespace: default
  labels:
    app: picture
    service: picture
spec:
  ports:
  - name: http
    targetPort: 3334 
    port: 3334
  selector:
    app: httpbin
