clusters/my-cluster/picture-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: picture-rule
  namespace: default
spec:
  host: picture.de 
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      app: picture
  - name: v2
    labels:
      app: picture-v2
