clusters/my-cluster/picture-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: picture
  namespace: default
spec:
  hosts:
  - "picture.de"
  gateways:
  - istio-ingress/picture-gateway
  http:
  - match:
    - uri:
        prefix: /api/picture
    route:
    - destination:
        host: picture
        port:
          number: 3334
        # subset: v1
      # weight: 50
    # - destination: 
      #   host: picture-v2
      #   port:
      #     number: 3334
      #   subset: v2
      # weight: 50
